finished the lab requirements (non visual)

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,14 @@
 body{
-  background-color: red;
+  background-color:blanchedalmond;
+  text-align: center;
+}
+input{
+  border: 1px solid grey;
+}
+#requestInfo{
+  color:black;
+  border: 1px solid grey;
+  background-color: gainsboro;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: large;
 }
