--- a/src/app.scss
+++ b/src/app.scss
@@ -1,14 +1,37 @@
 body{
-  background-color:blanchedalmond;
+  background-color:whitesmoke;
   text-align: center;
+  margin-left: 10%;
+  margin-right: 10%;
 }
-input{
+
+#url{
   border: 1px solid grey;
+  width: 80%;
+  height: 1vw;
 }
+
 #requestInfo{
   color:black;
   border: 1px solid grey;
   background-color: gainsboro;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: large;
+}
+
+#radioButtons{
+  padding: 20px;
+}
+
+.labels{
+ padding-right: 20px; 
+}
+button{
+  margin: 10px;
+  padding: 5px;
+  width: 5vw;
+}
+
+#requestInfo{
+  height: 200px;
 }
