--- a/src/app.scss
+++ b/src/app.scss
@@ -26,6 +26,7 @@ body{
 .labels{
  padding-right: 20px; 
 }
+
 button{
   margin: 10px;
   padding: 5px;
@@ -34,4 +35,6 @@ button{
 
 #requestInfo{
   height: 200px;
+  margin: auto;
+  width: 80%;
 }
