--- a/src/result.scss
+++ b/src/result.scss
@@ -1,4 +1,4 @@
-#result {
+#results {
   color: black;
   border: 1px solid grey;
   background-color: gainsboro;
@@ -6,4 +6,8 @@
   text-align: left;
   margin: auto;
   width: 80%;
+}
+
+.content {
+  margin-left: 10px;
 }
