managed to get the history showing, get all, get one by id and delete by id are all working

--- a/src/app.scss
+++ b/src/app.scss
@@ -4,3 +4,26 @@ body {
   margin-left: 10%;
   margin-right: 10%;
 }
+
+#history {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  float: left;
+  min-width: 20%;
+  max-width: 30%;
+  text-align: left;
+  outline: 1px solid grey;
+  padding-left: 5px;
+  padding-bottom: 20px;
+  word-wrap: break-word;
+}
+
+#content{
+  float: left;
+  min-width: 69%;
+  max-width: 79%;
+}
+
+#footer{
+  clear: left;
+  padding-top: 30px;
+}
