--- a/src/result.scss
+++ b/src/result.scss
@@ -17,3 +17,9 @@
 .content {
   margin-left: 10px;
 }
+
+#spinner{
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: large;
+  font-weight: bold;
+}
