--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -3,10 +3,10 @@ body {
   text-align: center;
   margin-left: 10%;
   margin-right: 10%;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #history {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   float: left;
   min-width: 20%;
   max-width: 30%;
@@ -15,6 +15,7 @@ body {
   padding-left: 5px;
   padding-bottom: 20px;
   word-wrap: break-word;
+  margin-top: 5px;
 }
 
 #content{
@@ -23,7 +24,3 @@ body {
   max-width: 79%;
 }
 
-#footer{
-  clear: left;
-  padding-top: 30px;
-}
